edition = "2023";

package frontend.v1;

import "google/protobuf/go_features.proto";

option go_package = "github.com/rajatgoel/gh-go/proto/frontend/v1";
option features.(pb.go).api_level = API_OPAQUE;

message PutRequest {
        int64 key = 1 [features.field_presence = IMPLICIT];
        string value = 2 [features.field_presence = IMPLICIT];
}

message PutResponse {
}

message GetRequest {
        int64 key = 1 [features.field_presence = IMPLICIT];
}

message GetResponse {
        string value = 1 [features.field_presence = IMPLICIT];
}

service FrontendService {
        rpc Put(PutRequest) returns (PutResponse);
        rpc Get(GetRequest) returns (GetResponse);
}
